UI improvements... added icons from original doc (they still need minifying). removed highlight demo. added shift-toggle for opacity. added escape to end editing.

--- a/index.html
+++ b/index.html
@@ -4,19 +4,20 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="styles.css">
-<title>Your Layout</title>
+<script defer src="script.js"></script>
+<title>Portsmouth MMC</title>
 
 <div class="grid-container">
     <header>The Mission Model Canvas</header>
-    <div class="grid-item" id="kp"><h2>Key Partners</h2><section class="e" contenteditable="true"></section></div>
-    <div class="grid-item" id="ka"><h2>Key Activities</h2><section class="e" contenteditable="true"></section></div>
-    <div class="grid-item" id="vp"><h2>Value Propositions</h2><section class="e" contenteditable="true"></section></div>
-    <div class="grid-item hi" id="bs"><h2>Buy-in Support</h2><section class="e" contenteditable="true"></section></div>
-    <div class="grid-item hi" id="be"><h2>Beneficiaries</h2><section class="e" contenteditable="true" autofocus></section></div>
-    <div class="grid-item" id="kr"><h2>Key Resources</h2><section class="e" contenteditable="true"></section></div>
-    <div class="grid-item hi" id="de"><h2>Deployment</h2><section class="e" contenteditable="true"></section></div>
-    <div class="grid-item" id="mb"><h2>Mission Budget/Cost</h2><section class="e" contenteditable="true"></section></div>
-    <div class="grid-item" id="if"><h2>Mission Achievement/Impact Factors</h2><section class="e" contenteditable="true"></section></div>
+    <div class="grid-item" id="kp"><h2>Key Partners <img src="i/kp.svg" alt=""></h2><section class="e" contenteditable="true"></section></div>
+    <div class="grid-item" id="ka"><h2>Key Activities <img src="i/ka.svg" alt=""></h2><section class="e" contenteditable="true"></section></div>
+    <div class="grid-item" id="vp"><h2>Value Propositions <img src="i/vp.svg" alt=""></h2><section class="e" contenteditable="true"></section></div>
+    <div class="grid-item" id="bs"><h2>Buy-in Support <img src="i/bs.svg" alt=""></h2><section class="e" contenteditable="true"></section></div>
+    <div class="grid-item" id="be"><h2>Beneficiaries <img src="i/be.svg" alt=""></h2><section class="e" contenteditable="true" autofocus></section></div>
+    <div class="grid-item" id="kr"><h2>Key Resources <img src="i/kr.svg" alt=""></h2><section class="e" contenteditable="true"></section></div>
+    <div class="grid-item" id="de"><h2>Deployment <img src="i/de.svg" alt=""></h2><section class="e" contenteditable="true"></section></div>
+    <div class="grid-item" id="mb"><h2>Mission Budget/Cost <img src="i/mb.svg" alt=""></h2><section class="e" contenteditable="true"></section></div>
+    <div class="grid-item" id="if"><h2>Mission Achievement/Impact Factors <img src="i/if.svg" alt=""></h2><section class="e" contenteditable="true"></section></div>
     <footer>
         <p>This work is licensed under the <a href="https://creativecommons.org/licenses/by-sa/3.0/">Creative Commons Attribution-ShareAlike 3.0 Unported (CC BY-SA 3.0)</a>
         <p><span>Designed by:</span> Strategyzer AG & Steve Blank.  Built for the web by Uni. of Portsmouth.
