Improvd markup with aria label for images.

--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 
 <div class="grid-container">
     <header>The Mission Model Canvas</header>
-    <div class="grid-item" id="kp"><h2>Key Partners <img src="i/kp.svg" alt=""></h2><section class="e" contenteditable="true"></section></div>
-    <div class="grid-item" id="ka"><h2>Key Activities <img src="i/ka.svg" alt=""></h2><section class="e" contenteditable="true"></section></div>
-    <div class="grid-item" id="vp"><h2>Value Propositions <img src="i/vp.svg" alt=""></h2><section class="e" contenteditable="true"></section></div>
-    <div class="grid-item" id="bs"><h2>Buy-in Support <img src="i/bs.svg" alt=""></h2><section class="e" contenteditable="true"></section></div>
-    <div class="grid-item" id="be"><h2>Beneficiaries <img src="i/be.svg" alt=""></h2><section class="e" contenteditable="true" autofocus></section></div>
-    <div class="grid-item" id="kr"><h2>Key Resources <img src="i/kr.svg" alt=""></h2><section class="e" contenteditable="true"></section></div>
-    <div class="grid-item" id="de"><h2>Deployment <img src="i/de.svg" alt=""></h2><section class="e" contenteditable="true"></section></div>
-    <div class="grid-item" id="mb"><h2>Mission Budget/Cost <img src="i/mb.svg" alt=""></h2><section class="e" contenteditable="true"></section></div>
-    <div class="grid-item" id="if"><h2>Mission Achievement/Impact Factors <img src="i/if.svg" alt=""></h2><section class="e" contenteditable="true"></section></div>
+    <div class="grid-item" id="kp"><h2 id="hkp">Key Partners <img aria-labelledby="hkp" src="i/kp.svg"></h2><section id="ekp" class="e" contenteditable="true"></section></div>
+    <div class="grid-item" id="ka"><h2 id="hka">Key Activities <img aria-labelledby="hka" src="i/ka.svg"></h2><section id="eka" class="e" contenteditable="true"></section></div>
+    <div class="grid-item" id="vp"><h2 id="hvp">Value Propositions <img aria-labelledby="hvp" src="i/vp.svg"></h2><section id="evp" class="e" contenteditable="true"></section></div>
+    <div class="grid-item" id="bs"><h2 id="hbs">Buy-in Support <img aria-labelledby="hbs" src="i/bs.svg"></h2><section id="ebs" class="e" contenteditable="true"></section></div>
+    <div class="grid-item" id="be"><h2 id="hbe">Beneficiaries <img aria-labelledby="hbe" src="i/be.svg"></h2><section id="ebe" class="e" contenteditable="true"></section></div>
+    <div class="grid-item" id="kr"><h2 id="hkr">Key Resources <img aria-labelledby="hkr" src="i/kr.svg"></h2><section id="ekr" class="e" contenteditable="true"></section></div>
+    <div class="grid-item" id="de"><h2 id="hde">Deployment <img aria-labelledby="hde" src="i/de.svg"></h2><section id="ede" class="e" contenteditable="true"></section></div>
+    <div class="grid-item" id="mb"><h2 id="hmb">Mission Budget/Cost <img aria-labelledby="hmb" src="i/mb.svg"></h2><section id="emb" class="e" contenteditable="true"></section></div>
+    <div class="grid-item" id="if"><h2 id="hif">Mission Achievement/Impact Factors <img aria-labelledby="hif" src="i/if.svg"></h2><section id="eif" class="e" contenteditable="true"></section></div>
     <footer>
         <p>This work is licensed under the <a href="https://creativecommons.org/licenses/by-sa/3.0/">Creative Commons Attribution-ShareAlike 3.0 Unported (CC BY-SA 3.0)</a>
         <p><span>Designed by:</span> Strategyzer AG & Steve Blank.  Built for the web by Uni. of Portsmouth.
