Add Description and Author sections at the top

--- a/index.html
+++ b/index.html
@@ -8,7 +8,19 @@
 <title>Portsmouth MMC</title>
 
 <div class="grid-container">
-    <header>The Mission Model Canvas</header>
+
+    <header>
+        <h1>The Mission Model Canvas</h1>
+        <div>
+            <label for="mmd">Mission/Problem Description</label>
+            <p id="mmd" contenteditable>edit</p>
+        </div>
+        <div>
+            <label for="mmd">Designed by</label>
+            <p id="by" contenteditable>edit</p>
+        </div>
+    </header>
+
     <div class="grid-item" id="kp"><h2 id="hkp">Key Partners <img aria-labelledby="hkp" src="i/kp.svg"></h2><section id="ekp" class="e" contenteditable="true"></section></div>
     <div class="grid-item" id="ka"><h2 id="hka">Key Activities <img aria-labelledby="hka" src="i/ka.svg"></h2><section id="eka" class="e" contenteditable="true"></section></div>
     <div class="grid-item" id="vp"><h2 id="hvp">Value Propositions <img aria-labelledby="hvp" src="i/vp.svg"></h2><section id="evp" class="e" contenteditable="true"></section></div>
@@ -20,6 +32,6 @@
     <div class="grid-item" id="if"><h2 id="hif">Mission Achievement/Impact Factors <img aria-labelledby="hif" src="i/if.svg"></h2><section id="eif" class="e" contenteditable="true"></section></div>
     <footer>
         <p>This work is licensed under the <a href="https://creativecommons.org/licenses/by-sa/3.0/">Creative Commons Attribution-ShareAlike 3.0 Unported (CC BY-SA 3.0)</a>
-        <p><span>Designed by:</span> Strategyzer AG & Steve Blank.  Built for the web by Uni. of Portsmouth.
+        <p><span>Designed by:</span> Strategyzer AG & Steve Blank.  Built for the web at Uni. of Portsmouth.
     </footer>
 </div>
