--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <p><strong>Click outside</strong> a section or press <span class="key">Escape</span> to stop editing.
     <h2>Defocusing</h2>
     <p><strong><span class="key">Shift</span>-click</strong> a section to defocus it (it will blend more into the background).
-    <p><strong>Type</strong> in any defocused area will automatically refocus it.
+    <p><strong>Type</strong> in any defocused area to automatically refocus it.
     <h2>Reset</h2>
     <p><span class="key">Ctrl</span>+<span class="key">Escape</span> opens a dialog that will allow you to remove all your text from the page.</p>
     <button id="usage-close">OK</button>
